# smb-rs

./: Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml
crates/smb/: Cargo.toml
crates/smb-cli/: Cargo.toml
crates/smb-dtyp/: Cargo.toml
crates/smb-dtyp-derive/: Cargo.toml  README.md
crates/smb-dtyp-derive/src/: lib.rs
crates/smb-dtyp/src/: lib.rs
crates/smb-dtyp/src/security/: ace.rs  security_descriptor.rs
crates/smb-fscc/src/: chained_list.rs  common_info.rs  filesystem_info.rs  query_file_info.rs
crates/smb-msg/: Cargo.toml
crates/smb-msg-derive/: Cargo.toml  README.md
crates/smb-msg-derive/src/: lib.rs
crates/smb-msg/src/: cancel.rs  compressed.rs  create.rs  dfsc.rs  echo.rs  encrypted.rs  error.rs  file.rs  header.rs  ioctl.rs  lib.rs  lock.rs  message.rs  negotiate.rs  notify.rs  oplock.rs  plain.rs  query_dir.rs  session_setup.rs  smb1.rs  tree_connect.rs
crates/smb-msg/src/info/: common.rs  query.rs  set.rs
crates/smb-msg/src/ioctl/: fsctl.rs  msg.rs
crates/smb-rpc/: Cargo.toml
crates/smb-rpc/src/: lib.rs  main.rs  pdu.rs
crates/smb-rpc/src/idl/: idl.pest  srvsvc.idl  syntax.rs
crates/smb-rpc/src/interface/: base.rs  srvsvc.rs
crates/smb-transport/: Cargo.toml
crates/smb-transport/scripts/: ksmbd.sh
crates/smb-transport/src/rdma/: smbd.rs
crates/smb/src/: compression.rs  connection.rs  resource.rs  tree.rs
crates/smb/src/client/: smb_client.rs
crates/smb/src/resource/: file.rs
crates/smb/src/session/: authenticator.rs  encryptor_decryptor.rs  setup.rs  spnego.rs  sspi_network_client.rs
(+1 files in other folders)
